fix: overflowing long text causing horizontal scroll

--- a/tgarchive/example/static/style.css
+++ b/tgarchive/example/static/style.css
@@ -191,6 +191,10 @@ ul {
 	min-height: 100vh;
 }
 
+div.body > div.text {
+	overflow-wrap: anywhere;
+}
+
 .messages {
 }
 	/* Day breaker heading */
